--- a/CSS/DanyloSecondGame.css
+++ b/CSS/DanyloSecondGame.css
@@ -28,9 +28,6 @@ html::-webkit-scrollbar {
     background-color: #EE9B00;
     border-radius: 25px;
 }
-
-    html::-webkit-scrollbar-track {
-}
 .loading{
     position: absolute;
     height: 100vh;
@@ -43,6 +40,14 @@ html::-webkit-scrollbar {
 .loading.animation{
     opacity: 1;
     z-index: 9999;
+}
+.logo-loading{
+    position: absolute;
+    left: 50%;
+    top: 17%;
+    transform: translate(-50%, -50%);
+    width: 120px;
+    -webkit-tap-highlight-color: transparent;
 }
 .title__loading-developers{
     position: relative;
@@ -160,6 +165,7 @@ html::-webkit-scrollbar {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 .header__mobile{
     display: none;
@@ -218,6 +224,7 @@ html::-webkit-scrollbar {
 .rules-box{
     position: absolute;
     user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 .rules-text{
     position: absolute;
@@ -281,6 +288,7 @@ html::-webkit-scrollbar {
     width: 5.5em;
     z-index: 2;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 .button-reference:hover {
     color: #fff;
@@ -299,7 +307,7 @@ html::-webkit-scrollbar {
     background: transparent;
 }
 .main{
-    position: fixed;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -311,6 +319,7 @@ html::-webkit-scrollbar {
     text-align: center;
     border-radius: 30% 30% 30% 0;
     padding: 30px;
+    box-shadow: 3px 3px 20px #141414;
 }
 .ready-text{
     position: absolute;
@@ -378,6 +387,7 @@ html::-webkit-scrollbar {
     color: #0e0e10;
     opacity: 0;
     z-index: -9999;
+    -webkit-tap-highlight-color: transparent;
 }
 .finished-button:hover{
     transform: scale(1.01);
@@ -395,6 +405,7 @@ html::-webkit-scrollbar {
     transition: 0.25s;
     font-family: 'Roboto';
     font-weight: bolder;
+    -webkit-tap-highlight-color: transparent;
     color: #0e0e10;
 }
 
@@ -427,6 +438,7 @@ html::-webkit-scrollbar {
 .text__modal__game-over{
     text-align: center;
     font-size: 24px;
+    font-weight: normal;
     padding: 40px 0 0 0;
 }
 .button__modal__game-over{
@@ -458,6 +470,7 @@ html::-webkit-scrollbar {
     height: 100%;
     transition: background 0.5s ease;
     width: 100%;
+    -webkit-tap-highlight-color: transparent;
 }
 .button__modal__game-over:hover .span__button__modal__game-over{
     background: transparent;
@@ -506,7 +519,7 @@ html::-webkit-scrollbar {
         height: 420px;
     }
     .start-button{
-        top: 56%;
+        top: 37%;
         transform: translateX(-50%);
     }
 }
@@ -602,6 +615,8 @@ html::-webkit-scrollbar {
         padding: 6px;
         color: #E9D8A6;
         font-size: 30px;
+        text-decoration: none;
+        text-decoration-style: none;
     }
     .nav > .menu > a:hover{
         color: #FFF;
@@ -635,14 +650,93 @@ html::-webkit-scrollbar {
         height: 420px;
     }
     .start-button{
+        top: 37%;
+        transform: translateX(-50%);
+    }
+    .modal__game-over{
+        width: 450px;
+        height: 250px;
+    }
+    .text__modal__game-over{
+        font-size: 19px;
+    }
+}
+@media(max-width: 595px){
+    .rules-box{
+        top: 2.75%;
+        left: 19.5%;
+    }
+    .rules-text{
+        left: 25%;
+        top: 21%;
+    }
+    .main{
         top: 56%;
+        height: 420px;
+    }
+    .start-button{
+        top: 37%;
         transform: translateX(-50%);
     }
 }
-@media(max-width: 571px){
+@media(max-width: 569px){
+    .modal__game-over{
+        width: 400px;
+        height: 250px;
+    }
+    .text__modal__game-over{
+        font-size: 19px;
+    }
+}
+@media(max-width: 521px){
     .rules-box{
         top: 2.75%;
-        left: 25.5%;
+        left: 14.5%;
+    }
+    .rules-text{
+        left: 22%;
+        top: 21%;
+    }
+    .reference-block{
+        position: absolute;
+        top: 58%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        user-select: none;
+        width: 400px;
+        height: 400px;
+        opacity: 0;
+        z-index: -9999;
+        background-color: #9B2226;
+        border-radius: 15px;
+        user-select: none;
+    }
+    .reference-block.visible__reference-block{
+        opacity: 1;
+        z-index: 9999;
+    }
+    .text-reference{
+        padding: 20px 0 0 0;
+        color: #e3e0e0;
+        text-align: center;
+        font-size: 17.5px;
+    }
+    .button-reference {
+        margin-top: 11.5%;
+        margin-left: 57%;
+        background-image: linear-gradient(to right, #EE9B00 0%, #BB3E03 100%);
+        border-radius: 40px;
+        box-sizing: border-box;
+        color: #E9D8A6;
+        display: block;
+        height: 42px;
+        font-size: 1em;
+        padding: 4px;
+        position: relative;
+        text-decoration: none;
+        width: 7em;
+        z-index: 2;
+        cursor: pointer;
     }
 }
 @media(max-width: 449px){
@@ -657,6 +751,92 @@ html::-webkit-scrollbar {
     .loader{
         top: 50%;
     }
+    .logo-loading{
+        top: 22%;
+    }
+}
+@media(max-width: 420px){
+    .rules-box{
+        top: 2.75%;
+        left: 7.5%;
+    }
+    .rules-text{
+        left: 16%;
+        top: 21%;
+    }
+    .main{
+        top: 56%;
+        height: 380px;
+        width: 330px;
+    }
+    .ready-text{
+        font-size: 22px;
+        padding: 30px 0 0 27px;
+    }
+    .level-text{
+        font-size: 33px;
+    }
+    .game-text{
+        font-size: 24px;
+        padding: 23px 0 0 0;
+    }
+    .start-button{
+        top: 37%;
+        left: 49%;
+        transform: translateX(-50%);
+    }
+    .finished-button{
+        padding: 8.5px 25px;
+        top: 35px;
+    }
+    .errors{
+        font-size: 16px;
+        padding: 50px 0 0 0;
+    }
+    .modal__game-over{
+        width: 330px;
+        height: 200px;
+    }
+    .text__modal__game-over{
+        font-size: 16px;
+    }
+    .reference-block{
+        position: absolute;
+        top: 58%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        user-select: none;
+        width: 320px;
+        height: 320px;
+        opacity: 0;
+        z-index: -9999;
+        background-color: #9B2226;
+        border-radius: 15px;
+        user-select: none;
+    }
+    .text-reference{
+        padding: 20px 0 0 0;
+        color: #e3e0e0;
+        text-align: center;
+        font-size: 13.5px;
+    }
+    .button-reference {
+        margin-top: 11.5%;
+        margin-left: 56%;
+        background-image: linear-gradient(to right, #EE9B00 0%, #BB3E03 100%);
+        border-radius: 40px;
+        box-sizing: border-box;
+        color: #E9D8A6;
+        display: block;
+        height: 37px;
+        font-size: 1em;
+        padding: 4px;
+        position: relative;
+        text-decoration: none;
+        width: 7.6em;
+        z-index: 2;
+        cursor: pointer;
+    }
 }
 @media(max-width: 369px){
     .title__loading-developers{
@@ -670,6 +850,104 @@ html::-webkit-scrollbar {
     .loader{
         top: 50%;
     }
+    .rules-box{
+        top: 2.75%;
+        left: -2.5%;
+    }
+    .rules-text{
+        left: 8%;
+        top: 21%;
+    }
+}
+@media(max-width: 353px){
+    .main{
+        top: 56%;
+        height: 350px;
+        width: 270px;
+    }
+    .ready-text{
+        font-size: 18.5px;
+        padding: 30px 0 0 15px;
+    }
+    .level-text{
+        font-size: 24px;
+    }
+    .game-text{
+        font-size: 18px;
+        padding: 21px 0 0 0;
+    }
+    .game-input{
+        top: 12.5px;
+    }
+    .start-button{
+        top: 37%;
+        left: 49%;
+        transform: translateX(-50%);
+        padding: 9px 36px;
+    }
+    .finished-button{
+        padding: 8.5px 25px;
+        top: 30px;
+    }
+    .errors{
+        font-size: 16px;
+        padding: 50px 0 0 0;
+    }
+    .modal__game-over{
+        width: 280px;
+        height: 175px;
+    }
+    .text__modal__game-over{
+        font-size: 14px;
+    }
+    .reference-block{
+        position: absolute;
+        top: 58%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        user-select: none;
+        width: 290px;
+        height: 290px;
+        opacity: 0;
+        z-index: -9999;
+        background-color: #9B2226;
+        border-radius: 15px;
+        user-select: none;
+    }
+    .text-reference{
+        padding: 20px 0 0 0;
+        color: #e3e0e0;
+        text-align: center;
+        font-size: 12.5px;
+    }
+    .button-reference {
+        margin-top: 11.5%;
+        margin-left: 56%;
+        background-image: linear-gradient(to right, #EE9B00 0%, #BB3E03 100%);
+        border-radius: 40px;
+        box-sizing: border-box;
+        color: #E9D8A6;
+        display: block;
+        height: 33px;
+        font-size: 1em;
+        padding: 4px;
+        position: relative;
+        text-decoration: none;
+        width: 7.8em;
+        z-index: 2;
+        cursor: pointer;
+    }
+}
+@media(max-width: 329px){
+    .rules-box{
+        left: -15%;
+        top: 4.2%;
+    }
+    .rules-text{
+        left: 4%;
+        top: 23%;
+        font-size: 20px;
+    }
 }
 @media(max-width: 310px){
     .title__loading-developers{
@@ -682,5 +960,12 @@ html::-webkit-scrollbar {
     }
     .loader{
         top: 50%;
+    }
+    .modal__game-over{
+        width: 270px;
+        height: 175px;
+    }
+    .text__modal__game-over{
+        font-size: 13.5px;
     }
 }
