--- a/CSS/Vladyslav.css
+++ b/CSS/Vladyslav.css
@@ -1,32 +1,27 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
-@import url("https://use.fontawesome.com/releases/v6.5.1/css/all.css");
-@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600&display=swap");
-
-*{
+/*  colors:
+#E9D8A6
+#EE9B00
+#CA6702
+#BB3E03
+#AE2012
+#9B2226  */
+* {
     margin: 0;
     padding: 0;
     border: 0;
     outline: 0;
     list-style: none;
     box-sizing: border-box;
-    text-decoration: none;
     scroll-behavior: smooth;
-    font-family: 'Roboto';
+    text-decoration: none;
 }
 body{
     background-color: #AE2012;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(209,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23AE2012'/%3E%3Cstop offset='1' stop-color='%23BB3E03'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1' gradientTransform='rotate(165,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23CA6702' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23CA6702' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2' gradientTransform='rotate(228,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23CA6702' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23CA6702' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
     background-size: cover;
-    background-position: center;
-}
-html::-webkit-scrollbar {
-    background-color: #f9f9fd;
-}
-
-    html::-webkit-scrollbar-thumb {
-    background-color: #EE9B00;
-    border-radius: 25px;
+    overflow: hidden;
 }
 
 .loading{
@@ -151,6 +146,21 @@ html::-webkit-scrollbar {
         box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
     }
 }
+@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+@import url("https://use.fontawesome.com/releases/v6.5.1/css/all.css");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@400;500;600&display=swap");
+
+html::-webkit-scrollbar {
+    background-color: #f9f9fd;
+}
+
+    html::-webkit-scrollbar-thumb {
+    background-color: #EE9B00;
+    border-radius: 25px;
+}
+
+    html::-webkit-scrollbar-track {
+}
 .text__header-mobile{
     display: none;
     opacity: 0;
@@ -181,6 +191,9 @@ html::-webkit-scrollbar {
     -ms-user-select: none;
     user-select: none;
 }
+.header__mobile{
+    display: none;
+}
 .logo{
     width: 80px;
     transition: 1.5s;
@@ -192,7 +205,7 @@ html::-webkit-scrollbar {
 .header{
     display: flex;
     background-color: #AE2012;
-    opacity: 0;
+    opacity: 1;
     justify-content: space-around;
     align-items: center;
     font-family: 'Roboto';
@@ -216,203 +229,132 @@ html::-webkit-scrollbar {
 .header:hover > :not(:hover){
     opacity: 0.4;
 }
-.i__title__home-box{
-    position: absolute;
-    display: flex;
-    left: 50%;
-    top: 18%;
-    transform: translateX(-50%);
-    align-items: center;
+
+.txt{
+    text-align: center;
+    margin-top: 50px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-family: 'Pixelify Sans';
+    letter-spacing: 3px;
+    color: #BB3E03;
+    text-shadow: 1px 1px 3px #000;
+    transition: 0.4s;
+    animation: start 2s linear infinite alternate;
 }
-.i__title-home{
-    color: #efeded;
-}
-.i__line-home{
-    margin-left: 5px;
-    width: 5px;
-    height: 45px;
-    background-color: #a9cdec;
-    animation: jumpHome 0.3s alternate infinite;
-}
-@keyframes jumpHome{
+@keyframes start{
     0%{
-        opacity: 0;
+        transform: scale(0.8);
     }
     100%{
-        opacity: 1;
+        transform: scale(1.2);
     }
 }
-.main{
-    display: grid;
-    grid-column: center;
-    opacity: 0;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto;
-    gap: 30px;
-    padding: 85px 0 0 290px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    gap: 30px;
-    -webkit-tap-highlight-color: transparent;
+.txt__background{
+    background-color: rgba(240, 248, 255, 0.578);
+    border-radius: 6px;
+    max-width: 500px;
+    margin: 0 auto;
 }
-.box-main-1{
-    width: 110px;
-    height: 120px;
+.info{
+    font-family: 'Pixelify Sans';
     text-align: center;
-    transition: .5s;
+    margin-top: 190px;
+    margin: 0 auto;
+    background-color: #EE9B00;
+    max-width: 600px;
+    border-radius: 6px;
+    border: 5px inset #ffd500ae;
 }
-.box-main-1:hover{
-    transform: scale(1.01);
+.info__title{
+    font-size: 50px;
+    color: rgb(255, 255, 0);
+    text-shadow: 1px 1px 2px #000;
 }
-.box-main-2{
-    width: 300px;
-    height: 250px;
+.info__txt{
+    padding: 10px;
+    text-shadow: 1px 1px 2px #000;
+    color: #E9D8A6;
+    font-size: larger;
+}
+.bottom__txt{
     text-align: center;
-}
-.box-main-3{
-    width: 300px;
-    height: 250px;
-    text-align: center;
-    grid-column: 1;
-}
-.box-main-4{
-    width: 300px;
-    height: 250px;
-    text-align: center;
-    grid-column: span 2;
-}
-.img-main-1{
-    padding: 10px 0 0 0;
-    width: 110px;
-    height: 120px;
-}
-.img-main-2{
-    padding: 10px 0 0 0;
-    width: 250px;
-}
-.img-main-3{
-    padding: 10px 0 0 0;
-    width: 250px;
-}
-.img-main-4{
-    padding: 10px 0 0 0;
-    width: 250px;
-}
-.title-main-1{
-    padding: 20px 0 0 0;
-    color: #E9D8A6;
-    font-family: 'Roboto';
-    font-weight: 450;
-}
-.title-main-2{
-    padding: 20px 0 0 0;
-    color: #E9D8A6;
-    font-family: 'Roboto';
-    font-weight: 450;
-}
-.title-main-3{
-    padding: 20px 0 0 0;
-    color: #E9D8A6;
-    font-family: 'Roboto';
-    font-weight: 450;
-}
-.title-main-4{
-    padding: 20px 0 0 0;
-    color: #E9D8A6;
-    font-family: 'Roboto';
-    font-weight: 450;
-}
-.footer{
-    width: 1342.5px;
-    height: 300px;
-    background-color: #9b1104;
-    margin-top: 230px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    display: none;
-}
-.description-footer{
+    margin-top: 80px;
+    font-family: 'Pixelify Sans';
+    text-transform: uppercase;
     color: #EE9B00;
-    font-family: 'Roboto';
+    text-shadow: 1px 1px 3px #000;
+    font-size: 50px;
+    letter-spacing: 3px;
+    transition: 0.4s;
+    animation: title 8s linear infinite;
+}
+@keyframes title{
+    0%{
+        transform: translateX(-1300px);
+    }
+    100%{
+        transform: translateX(1480px);
+    }
+}
+/* .loading{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    opacity: 0;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    background-color: #000;
+    transition: 0.4s;
+}
+.loading.new{
+    z-index: 1;
+    opacity: 1;
+    transition: 0.4s;
+}
+.load__text{
+    position: absolute;
+    bottom: 0;
+    right: 0;
     text-align: center;
-    font-size: 17px;
-    padding: 170px 0 0 0;
+    color: #fff;
+} */
+.loading {
+    z-index: -1;
+    width: 100%;
+    height: 105vh;
+    opacity: 0;
+    position: fixed;
+    left: 0;
+    top: 0;
+}
+.loading.new{
+    animation: loadbckg 1.7s linear forwards;
+}
+@keyframes loadbckg{
+    100%{
+    z-index: 9999;
+    opacity: 1;
+    background-color: black;
+    }
+}
+.load__text {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    color: aliceblue;
 }
 
-
-/* ADAPTIVE */
-
-
-@media(max-width: 1300px){
-
-    .footer{
-        width: 800px;
-        margin: 0 auto;
-        margin-top: 230px;
-        border-radius: 15px;
+@media(max-width: 1199px){
+    .main__image1{
+        display: none;
     }
-    .i__title-home{
-        font-size: 27px;
-    }
-    .main{
-        padding: 85px 0 0 195px;
-    }
-}
-
-@media(max-width: 1090px){
-    .main {
-        grid-template-columns: repeat(3, 1fr);
-        padding: 85px 0 0 165px;
-    }
-}
-@media(max-width: 1006px){
-    .i__title-home{
-        font-size: 25px;
-    }
-    .main{
-        padding: 85px 0 0 110px;
-    }
-}
-@media(max-width: 999px){
-    .i__title-home{
-        font-size: 25px;
-    }
-    .main{
-        padding: 85px 0 0 110px;
-    }
-}
-@media(max-width: 937px){
-    .i__title-home{
-        font-size: 23px;
-    }
-    .main{
-        padding: 85px 0 0 95px;
-    }
-}
-@media(max-width: 862px){
-    .i__title-home{
-        font-size: 21px;
-    }
-    .main{
-        padding: 85px 0 0 85px;
-    }
-}
-@media(max-width: 830px){
-    .footer{
-        width: 500px;
-        margin: 0 auto;
-        margin-top: 230px;
-        border-radius: 15px;
-    }
-    .i__title-home{
-        font-size: 20px;
-    }
-    .main{
-        padding: 85px 0 0 50px;
+    .main__image2{
+        display: none;
     }
 }
 @media(max-width: 808px){
@@ -420,30 +362,9 @@ html::-webkit-scrollbar {
         font-size: 15px;
     }
 }
-@media(max-width: 800px){
-    .i__title-home{
-        font-size: 20px;
-    }
-    .main{
-        display: flex;
-        flex-wrap: wrap;
-        padding: 85px 0 0 30px;
-    }
-}
 @media(max-width: 768px){
     .header{
         display: none;
-    }
-    .i__title__home-box{
-        top: 7%;
-    }
-    .i__title-home{
-        font-size: 20px;
-    }
-    .main{
-        display: flex;
-        flex-wrap: wrap;
-        padding: 120px 0 0 30px;
     }
     .text__header-mobile{
         position: fixed;
@@ -452,6 +373,7 @@ html::-webkit-scrollbar {
         z-index: 10001;
         top: 10px;
         left: 3.25%;
+        font-family: 'Roboto';
     }
     .header__label{
         position: fixed;
@@ -544,200 +466,48 @@ html::-webkit-scrollbar {
         transform: scale(1.04);
     }
 }
-@media(max-width: 745px){
-    .main{
-        padding: 120px 0 0 80px;
-        gap: 60px;
+
+.main__image1{
+    position: absolute;
+    max-width: 120px;
+    top: 130px;
+    left: 200px;
+    animation: fire 2s linear infinite alternate;
+}
+@keyframes fire{
+    0%{
+        transform: rotate(15deg) scale(1.1);
     }
-    .box-main-1{
-        width: 200px;
-        height: 150px;
-    }
-    .box-main-2{
-        width: 200px;
-        height: 150px;
-    }
-    .box-main-3{
-        width: 200px;
-        height: 150px;
-    }
-    .box-main-4{
-        width: 200px;
-        height: 150px;
-    }
-    .img-main-1{
-        padding: 10px 0 0 0;
-        width: 200px;
-    }
-    .img-main-2{
-        padding: 10px 0 0 0;
-        width: 200px;
-    }
-    .img-main-3{
-        padding: 10px 0 0 0;
-        width: 200px;
-    }
-    .img-main-4{
-        padding: 10px 0 0 0;
-        width: 200px;
-    }
-    .title-main-1{
-        padding: 20px 0 0 0;
-    }
-    .title-main-2{
-        padding: 20px 0 0 0;
-    }
-    .title-main-3{
-        padding: 20px 0 0 0;
-    }
-    .title-main-4{
-        padding: 20px 0 0 0;
-    }
-    .footer{
-        margin-top: 310px;
+    100%{
+        transform: rotate(-15deg) scale(1.4);
     }
 }
-@media(max-width: 677px){
-    .main{
-        padding: 140px 0 0 80px;
-        gap: 60px;
-        z-index: 10;
+.main__image2{
+    position: absolute;
+    max-width: 130px;
+    top: 130px;
+    right: 120px;
+    animation: star 2s linear infinite alternate-reverse;
+}
+@keyframes star{
+    0%{
+        transform: translateX(-50px) rotate(180deg);
     }
-    .box-main-1{
-        width: 175px;
-        height: 125px;
-    }
-    .box-main-2{
-        width: 175px;
-        height: 125px;
-    }
-    .box-main-3{
-        width: 175px;
-        height: 125px;
-    }
-    .box-main-4{
-        width: 175px;
-        height: 125px;
-    }
-    .img-main-1{
-        padding: 10px 0 0 0;
-        width: 175px;
-    }
-    .img-main-2{
-        padding: 10px 0 0 0;
-        width: 175px;
-    }
-    .img-main-3{
-        padding: 10px 0 0 0;
-        width: 175px;
-    }
-    .img-main-4{
-        padding: 10px 0 0 0;
-        width: 175px;
-    }
-    .footer{
-        z-index: -10;
+    100%{
+        transform: translateX(50px) rotate(-180deg);
     }
 }
-@media(max-width: 575px){
-    .main{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 20px 0 0 20px;
-        flex-direction: column;
-    }
-    .box-main-1{
-        width: 200px;
-        height: 150px;
-    }
-    .box-main-2{
-        width: 200px;
-        height: 150px;
-    }
-    .box-main-3{
-        width: 200px;
-        height: 150px;
-    }
-    .box-main-4{
-        width: 200px;
-        height: 150px;
-    }
-    .img-main-1{
-        padding: 10px 0 0 0;
-        width: 180px;
-    }
-    .img-main-2{
-        padding: 10px 0 0 0;
-        width: 180px;
-    }
-    .img-main-3{
-        padding: 10px 0 0 0;
-        width: 180px;
-    }
-    .img-main-4{
-        padding: 10px 0 0 0;
-        width: 180px;
-    }
-    .footer{
-        width: 350px;
-        margin: 0 auto;
-        margin-top: 230px;
-        border-radius: 15px;
-    }
-    .description-footer{
-        font-size: 13px;
-    }
+.main__image3{
+    position: absolute;
+    max-width: 140px;
+    right: 0;
+    animation: cat 5s linear infinite alternate;
 }
-@media(max-width: 449px){
-    .title__loading-developers{
-        top: 39.5%;
-        font-size: 24px;
+@keyframes cat{
+    0%{
+        transform: translateY(200px)
     }
-    .title__loading-copyright{
-        top: 53%;
-        font-size: 24px;
-    }
-    .loader{
-        top: 50%;
-    }
-    .logo-loading{
-        top: 22%;
-    }
-}
-@media(max-width: 395px){
-    .footer{
-        width: 250px;
-        height: 200px;
-    }
-    .description-footer{
-        font-size: 10px;
-        padding: 115px 0 0 0;
-    }
-}
-@media(max-width: 369px){
-    .title__loading-developers{
-        top: 39.5%;
-        font-size: 20px;
-    }
-    .title__loading-copyright{
-        top: 53%;
-        font-size: 20px;
-    }
-    .loader{
-        top: 50%;
-    }
-}
-@media(max-width: 310px){
-    .title__loading-developers{
-        top: 39.5%;
-        font-size: 19px;
-    }
-    .title__loading-copyright{
-        top: 53%;
-        font-size: 19px;
-    }
-    .loader{
-        top: 50%;
+    100%{
+        transform: translateY(-10px);
     }
 }
