--- a/CSS/Danylo.css
+++ b/CSS/Danylo.css
@@ -449,7 +449,7 @@ html::-webkit-scrollbar {
 }
 .footer{
     display: none;
-    width: 1342.5px;
+    width: 100%;
     height: 300px;
     background-color: #9b1104;
     margin-top: 230px;
