--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ html::-webkit-scrollbar {
     font-weight: 450;
 }
 .footer{
-    width: 1342.5px;
+    width: 100%;
     height: 300px;
     background-color: #9b1104;
     margin-top: 230px;
